# tanks

./: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
shaders/: main.fsh  main.vsh
sources/: App.cxx  App.hxx  Camera.cxx  Camera.hxx  Figure.cxx  Figure.hxx  Program.cxx  Program.hxx  World.cxx  World.hxx  game.cxx  game.hxx  logger.hxx  main.cxx  renderer.cxx  renderer.hxx  shader_program.cxx  shader_program.hxx
